# canadian-experience

CanadianExperienceLib/: SpartyFactory.cpp
MachineLib/: CMakeLists.txt  Component.cpp  Component.h  IMachineSystem.h  IMotionSink.h  Machine.cpp  Machine.h  MachineCFactory.cpp  MachineCFactory.h  MachineStandin.cpp  MachineStandin.h  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  MotionSource.cpp  MotionSource.h  Motor.cpp  Motor.h  Pulley.cpp  Pulley.h  Shape.cpp  Shape.h
